addresses memory issue in https://github.com/VRL-Studio/VRL-UG/issues/2 #2