@@ -50,10 +50,11 @@
 apply plugin: 'groovy'
 
 sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.10'
+wrapper {
+    gradleVersion = '6.8'
 }
 
 
@@ -65,7 +66,7 @@ buildscript {
     }
 
     dependencies {
-        classpath (group: 'eu.mihosoft.vrl', name: 'vrl', version: '0.4.3.2.3')
+        classpath (group: 'eu.mihosoft.vrl', name: 'vrl', version: '0.4.4.0.3')
     }
 }
 
@@ -79,8 +80,8 @@ dependencies {
 
     compileClasspath group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.12'
 
-    compile (group: 'eu.mihosoft.vrl', name: 'vrl', version: '0.4.3.2.3')
-    compile (group: 'eu.mihosoft.vrl', name: 'vrl', version: '0.4.3.2.3', classifier: 'javadoc')
+    compile (group: 'eu.mihosoft.vrl', name: 'vrl', version: '0.4.4.0.3')
+    compile (group: 'eu.mihosoft.vrl', name: 'vrl', version: '0.4.4.0.3', classifier: 'javadoc')
 
     compile group: 'org.apache.xmlrpc', name: 'xmlrpc-client', version: '3.1.3'
     compile group: 'org.apache.xmlrpc', name: 'xmlrpc-server', version: '3.1.3'
@@ -147,5 +148,12 @@ task installVRLPlugin(dependsOn: [clean,jar]) {
             into getVRLDir() + "/plugin-updates"
             include '**/*.jar'
         }
+    }
+}
+
+tasks.withType(GroovyCompile) {
+    configure(groovyOptions.forkOptions) {
+        memoryMaximumSize = '1g'
+        jvmArgs = ['-XX:MaxPermSize=512m', '-Xms512m', '-Xmx4096g']
     }
 }
